<resources>
    <string name="app_name">EncuestApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Preguntas</string>
    <string name="title_notifications">Mi perfil</string>
    <string name="no_votos">No se han registrado votos todavía.</string>
    <string name="b_pie">Ver PieChart</string>
    <string name="b_barras">Ver diag. Barras</string>
    <string name="b_dialogOK">Adelante</string>
    <string name="b_dialogAtras">Atrás</string>
    <string name="t_campoVacio">Completa los campos</string>
    <string name="titulo_vacio">El título de la pregunta es un campo obligatorio.</string>
    <string name="placeholder_enunciado">La pregunta debe ser clara y concisa. Escríbela aquí!</string>
    <string name="opcionesInsuficiones">¡Debes definir como mínimo 2 opciones!</string>
    <string name="t_op_invalidas">Opciones inválidas</string>
    <string name="error_op">Por favor, define como mínimo las opciones 1 y 2.</string>
    <string name="t_pregRegistrada">Pregunta ya registrada</string>
    <string name="m_pregRegistrada">Ya hay una pregunta registrada a tu nombre con el mismo título.</string>
    <string name="publicadas">Número de encuestas que has creado:</string>
    <string name="participaciones">Número de encuestas en las que has participado:</string>
    <string name="fecha_union">Fecha en la que te uniste:</string>
    <string name="t_dialogEliminar">Eliminar pregunta</string>
    <string name="m_dialogEliminar">¿Seguro que quieres borrar la encuesta?</string>
    <string name="no_es_autor">¡No puedes borrar una encuesta que no has creado!</string>
    <string name="p_borrada">La pregunta se ha borrado correctamente.</string>
    <string name="t_encuestas">ENCUESTAS PUBLICADAS</string>
    <string name="preguntaDe">Pregunta de:</string>
    <string name="enunciado_vacio">El enunciado de la pregunta es un campo obligatorio.</string>
    <string name="idiomas">IDIOMAS</string>
    <string name="seleccionIdioma">Elige el idioma al que quieres cambiar la aplicación:</string>
    <string name="euskera">EUSKERA</string>
    <string name="español">CASTELLANO</string>
    <string name="ingles">INGLÉS</string>
    <string name="cargaPreguntas">Cargando preguntas...</string>
    <string name="d_cargaPreguntas">Espera mientras se carga el listado de preguntas, por favor.</string>
    <string name="bienvenido">¡Bienvenido/a a EncuestApp!</string>
    <string name="iniciaSesion">- Inicia sesión -</string>
    <string name="campo_email">Correo electrónico*</string>
    <string name="campo_passwd">Contraseña*</string>
    <string name="b_ingresarRegistro">Ingresar</string>
    <string name="registrar">Regístrate</string>
    <string name="nuevo">¿Eres nuevo?</string>
    <string name="ingresa_Email">¡Introduce un correo electrónico!</string>
    <string name="ingresaPass">¡Introduce una contraseña!</string>
    <string name="passwd_incorrecta">¡La contraseña es incorrecta!</string>
    <string name="userPass_incorrectos">El email y/o contraseña incorrectos</string>
    <string name="yaRegistrado">¡El usuario ya se encuentra registrado!</string>
    <string name="creaCuenta">Crea una cuenta</string>
    <string name="registraDatos">Registra tus datos</string>
    <string name="tengoCuenta">Ya tengo cuenta</string>
    <string name="rep_pass">Repite la contraseña*</string>
    <string name="campo_nombre">Nombre*</string>
    <string name="campo_apellido">Apellido*</string>
    <string name="emailInvalido">El email insertado es inválido</string>
    <string name="contrasenaNoCoinciden">¡Las contraseñas deben coincidir!</string>
    <string name="meteContrasena">Introduce la contraseña</string>
    <string name="meteEmail">Introduce el email</string>
    <string name="meteNombre">Introduce el nombre</string>
    <string name="meteApellido">Introduce tu apellido(s)</string>
    <string name="registroOk">¡Registro completado!</string>
    <string name="perfil">PERFIL</string>
    <string name="nombre">NOMBRE</string>
    <string name="email">CORREO ELECTRÓNICO</string>
    <string name="estadisticas">Mis estadísticas</string>
    <string name="preguntaAnadida">¡La pregunta se ha publicado correctamente!</string>
    <string name="encuestaAbierta">ENCUESTA ABIERTA</string>
    <string name="opciones">OPCIONES</string>
    <string name="enviar">ENVIAR</string>
    <string name="anadirPregunta">AÑADIR PREGUNTA</string>
    <string name="buscarTitulo">Buscar por título</string>
    <string name="campoTituloPregunta">Introduce el título de la pregunta</string>
    <string name="maxOpciones">Indica un máximo de 4 opciones</string>
    <string name="publicar">PUBLICAR</string>
    <string name="opcion1">OPCIÓN 1</string>
    <string name="opcion2">OPCIÓN 2</string>
    <string name="opcion3">OPCIÓN 3</string>
    <string name="opcion4">OPCIÓN 4</string>
    <string name="t_dialogFotoPerfil">Subiendo imagen al servidor</string>
    <string name="m_espera">Espera, por favor</string>
    <string name="imagenGuardadaOK">¡Imagen guardada con éxito!</string>
    <string name="titulo_pregunta">Título de la encuesta</string>
    <string name="pregunta_pregunta">Pregunta</string>
    <string name="votoOK">¡El voto se ha registrado correctamente!</string>
    <string name="numVotos">Nº de votos:</string>
</resources>