<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".actividades.Act_Login">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp"></Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:src="@drawable/logo_extra"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="48dp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/gris_negro"
                android:text="___"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alata"
                android:text="@string/bienvenido"
                android:textColor="@color/negro"
                android:textSize="27sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/alata"
                android:text="@string/iniciaSesion"
                android:textColor="@color/gris_negro"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/campo_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_emailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:inputType="textEmailAddress"
                        android:textSize="20dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/alata"
                    android:hint="@string/campo_passwd"
                    android:textSize="20dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_passwordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:inputType="textPassword"
                        android:textSize="20dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_ingresarLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:fontFamily="@font/alata"
                    android:onClick="ingresar"
                    android:text="@string/b_ingresarRegistro"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/nuevo"
                        android:textColor="@color/negro"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_Registrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:fontFamily="@font/alata"
                        android:text="@string/registrar"
                        android:textColor="@color/azul_turquesa"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/negro"
                    android:text=""
                    android:textSize="5sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_EspanolLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/español"
                        android:textColor="@color/negro"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_EspanolLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:text="/"

                        android:textColor="@color/negro"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/btn_InglesLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:fontFamily="@font/alata"
                        android:text="@string/ingles"
                        android:textColor="@color/negro"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_InglesLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:text="/"

                        android:textColor="@color/negro"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/btn_EuskeraLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:fontFamily="@font/alata"
                        android:text="@string/euskera"
                        android:textColor="@color/negro"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>