<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".actividades.Act_Registro">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/registro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:layout_height="200dp"
                    android:gravity="center"
                    app:srcCompat="@drawable/completed_steps_pana" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/creaCuenta"
                        android:layout_gravity="center"
                        android:fontFamily="@font/alata"
                        android:textColor="@color/negro"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/alata"
                        android:text="@string/registraDatos"
                        android:layout_gravity="center"
                        android:textColor="@color/gris_negro"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/verde"/>
            <LinearLayout
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_nombre">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_nombreRegistro"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/alata"
                        android:textSize="19dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_apellido">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_apellidoRegistro"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/alata"
                        android:textSize="19dp"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_emailRegistro"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/alata"
                        android:textSize="19dp"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_passwd"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_passwordRegistro1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:textSize="19dp"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rep_pass"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_passwordRegistro2"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/alata"
                        android:textSize="19dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_registrarRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/negro"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/alata"
                    android:onClick="registrarUsuario"
                    android:gravity="center"
                    android:textSize="23dp"
                    android:text="@string/registrar" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/negro"/>
                <TextView
                    android:id="@+id/tv_Logueate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tengoCuenta"
                    android:layout_gravity="center"
                    android:fontFamily="@font/alata"
                    android:textColor="@color/azul_turquesa"
                    android:textSize="22dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>